--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,17 +13,17 @@ environment:
 
 dependencies:
   bbob_dart: ^0.2.1
-  bloc: ^8.1.3
+  bloc: ^8.1.4
   card_swiper: ^3.0.1
   change_case: ^2.0.1
   # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
   cupertino_icons: ^1.0.6
-  dart_mappable: ^4.2.1
+  dart_mappable: ^4.2.2
   # Blocked by appflow-editor
   device_info_plus: ^9.1.2
-  dio: ^5.4.1
+  dio: ^5.4.2+1
   dio_cookie_manager: ^3.1.1
   easy_refresh: ^3.3.4
   equatable: ^2.0.5
@@ -36,24 +36,24 @@ dependencies:
     # git:
     #   url: https://github.com/realth000/flutter_bbcode_editor.git
     #   ref: fc03d1595adfa7d2e3b672e2407460c61699b82c
-  flutter_bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.6.22
+  flutter_markdown: ^0.6.22+1
   font_awesome_flutter: ^10.7.0
-  get_it: ^7.6.7
+  get_it: ^7.6.8
   gitsumu: ^0.3.0
-  go_router: ^13.2.1
+  go_router: ^13.2.2
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
   path: any
   path_provider: ^2.1.2
-  permission_handler: ^11.3.0
+  permission_handler: ^11.3.1
   responsive_framework: ^1.4.0
   rxdart: ^0.27.7
   shimmer: ^3.0.0
-  slang: ^3.30.1
+  slang: ^3.30.2
   slang_flutter: ^3.30.0
   stream_transform: ^2.1.0
   surf_lint_rules: ^3.0.0
@@ -62,12 +62,12 @@ dependencies:
   uuid: ^4.3.3
 
 dev_dependencies:
-  build_runner: ^2.4.8
+  build_runner: ^2.4.9
   dart_mappable_builder:
     git:
       url: https://github.com/realth000/dart_mappable
       path: "packages/dart_mappable_builder"
-      ref: c57472c8fd2434d3eb5e100f7170d4c23b788610
+      branch: main
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
