--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
+  # Workaround for dart_mappable build issue
+  ansicolor: any
   bbob_dart: ^0.2.1
   bloc: ^8.1.4
   card_swiper: ^3.0.1
@@ -65,7 +67,7 @@ dev_dependencies:
   build_runner: ^2.4.8
   dart_mappable_builder:
     git:
-      url: https://github.com/realth000/dart_mappable
+      url: https://github.com/schultek/dart_mappable.git
       path: "packages/dart_mappable_builder"
       branch: main
   flutter_launcher_icons: ^0.13.1
