--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.8.1
+  material_design_icons_flutter: ^7.0.7296
   path: any
   path_provider: ^2.1.2
   permission_handler: ^11.3.1
