--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,12 @@ dependencies:
   # Blocked by flutter
   collection: any
   cookie_jar: ^4.0.8
-  cupertino_icons: ^1.0.6
   dart_mappable: ^4.2.2
   # Blocked by appflow-editor
   device_info_plus: ^9.1.2
-  dio: ^5.4.2+1
+  dio: ^5.4.3+1
   dio_cookie_manager: ^3.1.1
-  easy_refresh: ^3.3.4
+  easy_refresh: ^3.3.5+1
   equatable: ^2.0.5
   extended_nested_scroll_view: ^6.2.1
   flex_color_scheme: ^7.3.1
@@ -41,17 +40,17 @@ dependencies:
   flutter_bloc: ^8.1.5
   flutter_localizations:
     sdk: flutter
-  flutter_markdown: ^0.6.22+1
+  flutter_markdown: ^0.7.1
   font_awesome_flutter: ^10.7.0
-  get_it: ^7.6.8
+  get_it: ^7.7.0
   gitsumu: ^0.3.0
-  go_router: ^13.2.2
+  go_router: ^14.0.1
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
   material_design_icons_flutter: ^7.0.7296
   path: any
-  path_provider: ^2.1.2
+  path_provider: ^2.1.3
   permission_handler: ^11.3.1
   responsive_framework: ^1.4.0
   rxdart: ^0.27.7
@@ -59,13 +58,13 @@ dependencies:
   slang: ^3.30.2
   slang_flutter: ^3.30.0
   stream_transform: ^2.1.0
-  surf_lint_rules: ^3.0.0
+  surf_lint_rules: ^3.0.2
   universal_html: ^2.2.4
-  url_launcher: ^6.2.5
-  uuid: ^4.3.3
+  url_launcher: ^6.2.6
+  uuid: ^4.4.0
 
 dev_dependencies:
-  build_runner: ^2.4.8
+  build_runner: ^2.4.9
   dart_mappable_builder:
     git:
       url: https://github.com/schultek/dart_mappable.git
@@ -74,7 +73,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.7.1
+  json_serializable: ^6.8.0
   slang_build_runner: ^3.30.0
   very_good_analysis: ^5.1.0
 
