--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^7.7.0
   gitsumu: ^0.3.0
   go_router: ^14.0.2
+  html: ^0.15.4
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.9.0
