--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,8 @@ publish_to: 'none'
 version: 0.10.1+14
 
 environment:
-  flutter: ">=3.19.0 <4.0.0"
-  sdk: '>=3.3.0 <4.0.0'
+  flutter: ">=3.22.0 <4.0.0"
+  sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
   # Workaround for dart_mappable build issue
@@ -25,7 +25,7 @@ dependencies:
   device_info_plus: ^10.1.0
   dio: ^5.4.3+1
   dio_cookie_manager: ^3.1.1
-  easy_refresh: ^3.3.5+1
+  easy_refresh: ^3.4.0
   equatable: ^2.0.5
   extended_nested_scroll_view: ^6.2.1
   flex_color_scheme: ^7.3.1
@@ -43,7 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   get_it: ^7.7.0
   gitsumu: ^0.3.0
-  go_router: ^14.0.2
+  go_router: ^14.1.1
   html: ^0.15.4
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
