--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   universal_html: ^2.2.4
   url_launcher: ^6.2.6
   uuid: ^4.4.0
+  widget_zoom: ^0.0.4
 
 dev_dependencies:
   build_runner: ^2.4.10
