--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   ansicolor: any
   bbob_dart: ^0.2.1
   bloc: ^8.1.4
-  card_swiper: ^3.0.1
   change_case: ^2.0.1
   # Blocked by flutter
   collection: any
@@ -45,6 +44,10 @@ dependencies:
   gitsumu: ^0.3.0
   go_router: ^14.1.4
   html: ^0.15.4
+  infinite_carousel:
+    git:
+      url: https://github.com/realth000/infinite-carousel-flutter
+      ref: 11742d44ddec450b324b49b22e2196438b4ebfe1
   isar: ^4.0.0-dev.14
   isar_flutter_libs: ^4.0.0-dev.14
   json_annotation: ^4.9.0
