--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
+  analyzer: ^6.4.1
   # Workaround for dart_mappable build issue
   ansicolor: any
   bbob_dart: ^0.2.1
@@ -39,9 +40,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_markdown: ^0.7.1
+  flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
   get_it: ^7.7.0
-  gitsumu: ^0.3.0
+  gitsumu: ^0.4.1
   go_router: ^14.1.4
   html: ^0.15.4
   infinite_carousel:
