--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bbcode_editor:
-    path: './packages/flutter_bbcode_editor'
-    # git:
-    #   url: https://github.com/realth000/flutter_bbcode_editor.git
-    #   ref: fc03d1595adfa7d2e3b672e2407460c61699b82c
+    git:
+      url: https://github.com/realth000/flutter_bbcode_editor.git
+      ref: 7b77e0601eba354ec2b8696b0ccef9713d55aeba
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
