--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    env:
+      PRERELEASE: ${{ contains(github.ref_name, '-') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,9 +26,12 @@ jobs:
         uses: ffurrer2/extract-release-notes@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          prerelease: $PRERELEASE
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
+          prerelease: $PRERELEASE
           allowUpdates: true
           body: '${{ steps.extract-release-notes.outputs.release_notes }}'
 
