--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          prerelease: $PRERELEASE
+          prerelease: ${{ env.PRERELEASE }}
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
