--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,8 @@ publish_to: "none"
 version: 1.11.0+51
 
 environment:
-  flutter: ">=3.32.0 <4.0.0"
-  sdk: ">=3.8.0 <4.0.0"
+  flutter: ">=3.35.0 <4.0.0"
+  sdk: ">=3.9.0 <4.0.0"
 
 dependencies:
   args: ^2.6.0
@@ -22,20 +22,23 @@ dependencies:
     path: ./packages/dart_bbcode_parser
   dart_bbcode_web_colors:
     path: ./packages/dart_bbcode_web_colors
-  dart_mappable: ^4.5.0
+  dart_mappable: ^4.6.0
   dart_quill_delta: ^10.8.3
-  dio: ^5.8.0+1
+  dio: ^5.9.0
   dio_brotli_transformer: ^2.0.0
-  dio_cookie_manager: ^3.2.0
-  drift: ^2.28.0
+  dio_cookie_manager: ^3.3.0
+  drift: ^2.28.1
   # For drift
   drift_dev: ^2.28.0
   drift_flutter: ^0.2.5
   easy_refresh: ^3.4.0
   equatable: ^2.0.7
-  file_picker: ^10.2.0
+  file_picker: ^10.3.1
   flex_color_picker: ^3.7.1
-  flex_color_scheme: ^8.2.0
+  flex_color_scheme:
+    git:
+      url: https://github.com/rydmike/flex_color_scheme
+      ref: d838cae8a0fbcc663ca0b99ee6fce5f1ae7c163c
   flutter:
     sdk: flutter
   flutter_avif:
@@ -49,16 +52,16 @@ dependencies:
   flutter_markdown: ^0.7.7+1
   flutter_styled_toast: ^2.2.1
   flutter_svg: ^2.2.0
-  font_awesome_flutter: ^10.8.0
+  font_awesome_flutter: ^10.9.0
   fpdart: ^1.1.1
-  get_it: ^8.0.3
+  get_it: ^8.2.0
   gitsumu: ^0.7.0
-  go_router: ^16.0.0
+  go_router: ^16.1.0
   html: ^0.15.5+1
   image_picker: ^1.1.2
   json_annotation: ^4.9.0
   material_design_icons_flutter: ^7.0.7296
-  material_symbols_icons: ^4.2815.1
+  material_symbols_icons: ^4.2858.1
   native_flutter_proxy: ^0.2.3
   path: any
   path_provider: ^2.1.5
@@ -66,17 +69,17 @@ dependencies:
   photo_view: ^0.15.0
   responsive_framework: ^1.5.1
   rxdart: ^0.28.0
-  share_plus: ^11.0.0
+  share_plus: ^11.1.0
   shimmer: ^3.0.0
-  slang: ^4.7.3
-  slang_flutter: ^4.7.0
+  slang: ^4.8.1
+  slang_flutter: ^4.8.0
   smooth_sheets: ^0.14.0
   system_network_proxy:
     path: ./packages/flutter_system_network_proxy/system_network_proxy
   # For drift
-  sqlite3: ^2.7.7
+  sqlite3: ^2.9.0
   # For drift
-  sqlite3_flutter_libs: ^0.5.37
+  sqlite3_flutter_libs: ^0.5.39
   stream_transform: ^2.1.1
   super_sliver_list: ^0.4.1
   system_theme: ^3.1.2
@@ -96,11 +99,6 @@ dependency_overrides:
       # 0.14.2
       ref: ce500ed0953a8767f4c84815195baa9cd121f2dc
       path: pkgs/jni
-  # For build issues in GitHub CI.
-  # ref: https://github.com/dart-lang/sdk/issues/60784#issuecomment-2907039707
-  analyzer: ^7.4.0
-  analyzer_plugin: 0.13.1
-
 
 dev_dependencies:
   build_runner: 2.5.4
@@ -111,8 +109,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.9.4
-  pyramid_lint: ^2.1.0
-  slang_build_runner: ^4.7.0
+  pyramid_lint: ^2.2.0
+  slang_build_runner: ^4.8.0
   very_good_analysis: ^7.0.0
 
 flutter:
