--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,8 @@ publish_to: "none"
 version: 1.12.0+52
 
 environment:
-  flutter: ">=3.38.0 <4.0.0"
-  sdk: ">=3.10.0-290.4.beta <4.0.0"
+  flutter: ">=3.38.1 <4.0.0"
+  sdk: ">=3.10.0 <4.0.0"
 
 dependencies:
   args: ^2.6.0
@@ -27,11 +27,9 @@ dependencies:
   dio: ^5.9.0
   dio_brotli_transformer: ^2.0.0
   dio_cookie_manager: ^3.3.0
-  # Blocked by build_runner
-  drift: ^2.28.2
-  # Blocked by build_runner
+  drift: ^2.29.0
   # For drift
-  drift_dev: ^2.28.0
+  drift_dev: ^2.29.0
   drift_flutter: ^0.2.7
   easy_refresh: ^3.4.0
   equatable: ^2.0.7
@@ -54,7 +52,7 @@ dependencies:
   font_awesome_flutter: ^10.12.0
   fpdart: ^1.2.0
   get_it: ^9.0.5
-  gitsumu: ^0.7.1
+  gitsumu: ^0.7.2
   go_router: ^17.0.0
   html: ^0.15.5+1
   image_picker: ^1.2.1
@@ -73,7 +71,7 @@ dependencies:
   rxdart: ^0.28.0
   share_plus: ^12.0.1
   shimmer: ^3.0.0
-  slang: ^4.10.0
+  slang: ^4.10.1
   slang_flutter: ^4.10.0
   smooth_sheets: ^0.15.0
   # For drift
@@ -87,7 +85,7 @@ dependencies:
   system_theme: ^3.1.2
   talker: ^5.0.2
   talker_flutter: ^5.0.2
-  universal_html: ^2.2.4
+  universal_html: ^2.3.0
   url_launcher: ^6.3.2
   uuid: ^4.5.2
   web: ^1.1.1
@@ -103,8 +101,7 @@ dependency_overrides:
       path: pkgs/jni
 
 dev_dependencies:
-  # Blocked by pyramid_lint
-  build_runner: 2.5.4
+  build_runner: ^2.10.3
   custom_lint: ^0.8.0
   dart_mappable_builder: ^4.5.0
   flutter_launcher_icons: ^0.14.4
@@ -112,7 +109,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.9.4
-  pyramid_lint: ^2.3.0
+  pyramid_lint: ^2.4.0
   slang_build_runner: ^4.10.0
   very_good_analysis: ^10.0.0
 
